@@ -188,8 +188,9 @@ Program
   iff they can be automatically solved by the default tactic.
 - New command "Preterm [ of id ]" to see the actual term fed to Coq for
   debugging purposes.
-- New option "Transparent Obligations" to force the declaration of 
-  all obligations as transparent.
+- New option "Transparent Obligations" to control the declaration of 
+  obligations as transparent or opaque. All obligations are now transparent 
+  by default, otherwise the system declares them opaque if possible.
 - Changed the notations "left" and "right" to "in_left" and "in_right" to hide 
   the proofs in standard disjunctions, to avoid breaking existing scripts when 
   importing Program. Also, put them in program_scope.
